# stage1

Microsoft-prototype/: ._main.cpp  CMakeLists.txt  Data.cpp  Data.h  Feature.cpp  Feature.h  FormatResult.h  Readme.txt  Screw.cpp  Screw.h  ScrewSizes.h  ScrewTrauma.cpp  ScrewTrauma.h  SpeechRecognizer.cpp  SpeechRecognizer.h  StringData.cpp  SurgeryType.cpp  SurgeryType.h  TextToSpeech.cpp  TextToSpeech.h  Tool.cpp  Tool.h  ToolHandleType.h  ToolPropertySearch.h  ToolWithSizes.cpp  ToolWithSizes.h  filterSpeech.cpp  filterSpeech.h  main.cpp  stringData.h
Microsoft-prototype/test/: CMakeLists.txt  filterSpeechTest.h  filterSpeechTestTrauma.h  filterSpeechTestTraumaAnkle.h  main.cpp
vosk-prototype/: AttentionUser.py  Data.py  Feature.py  FilterSpeechTest.py  FilterSpeechTestTrauma.py  FilterSpeechTestTraumaAnkle.py  FormatResult.py  Screw.py  ScrewTrauma.py  SurgeryType.py  TextToSpeech.py  Tool.py  ToolHandleType.py  ToolProperties.py  ToolPropertySearch.py  ToolWithSizes.py  filterSpeech.py  main.py  microphoneRecognition.py
